WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157773
No candidate punctuation when typing punctuation in WK2 text field
https://bugs.webkit.org/show_bug.cgi?id=157773
Summary
No candidate punctuation when typing punctuation in WK2 text field
Enrica Casucci
Reported
2016-05-16 17:05:13 PDT
1. Switch keyboard to Chinese 10 key 2. Launch Safari and navigate to a page with input fields 3. Tap in the field to bring up the keyboard and tap ,.?! key * RESULTS Expected behavior: The candidate bar should be updated to reflect the candidates for the punctuation. Actual behavior: No candidate for the punctuation key.
rdar://problem/23084603
Attachments
Patch
(9.48 KB, patch)
2016-05-16 17:11 PDT
,
Enrica Casucci
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2016-05-16 17:11:17 PDT
Created
attachment 279071
[details]
Patch
WebKit Commit Bot
Comment 2
2016-05-16 17:12:49 PDT
Attachment 279071
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebEvent.h:142: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:144: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:145: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:146: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:147: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:148: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:149: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:150: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.h:163: Should have space between @property and attributes. [whitespace/property] [4] ERROR: Source/WebCore/platform/ios/WebEvent.mm:168: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:170: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:171: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:172: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:173: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:174: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:175: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:176: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/platform/ios/WebEvent.mm:177: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 18 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2016-05-17 11:13:48 PDT
Comment on
attachment 279071
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279071&action=review
This needs a test before landing.
> Source/WebCore/platform/ios/WebEvent.h:163 > +@property(nonatomic, readonly, retain) NSString *inputManagerHint;
Normally we make NSString properties copy. Any reason this one needs to be retain?
Enrica Casucci
Comment 4
2016-05-19 16:31:38 PDT
Committed revision 201199.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug