No candidate punctuation when typing punctuation in WK2 text field. https://bugs.webkit.org/show_bug.cgi?id=157773 rdar://problem/23084603

Reviewed by Sam Weinig.

Source/WebCore:

We need to keep the inputManagerHint as part of the platform key event
information. Adding a new initializer for the task and a property to retrieve
the stored hint.

* platform/ios/WebEvent.h:
* platform/ios/WebEvent.mm:
(-[WebEvent initWithKeyEventType:timeStamp:characters:charactersIgnoringModifiers:modifiers:isRepeating:withFlags:keyCode:isTabKey:characterSet:]):
(-[WebEvent initWithKeyEventType:timeStamp:characters:charactersIgnoringModifiers:modifiers:isRepeating:withFlags:withInputManagerHint:keyCode:isTabKey:]):
(-[WebEvent dealloc]):
(-[WebEvent inputManagerHint]):

Source/WebKit2:

We need to adopt the new addInputString:withFlags:withInputManagerHint function
for this to work propertly.

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _interpretKeyEvent:isCharEvent:]):



Canonical link: https://commits.webkit.org/176045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201199 268f45cc-cd09-0410-ab3c-d52691b4dbfc